# desktop_archives_scraper

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  plan-desktopArchivesScraper.prompt.md  pyproject.toml  requirements.txt  run_with_retry.ps1
deployment_scripts/: Orchestrator.ps1  Run-App.ps1  Set-SystemTesseractPath.ps1  Update-Code.ps1  run-params.env.example
desktop_archives_scraper/: cli.py  config.py  logging_configuration.py  worker.py
desktop_archives_scraper/db/: __init__.py  db.py  models.py  queries.py
desktop_archives_scraper/embedding/: minilm.py
desktop_archives_scraper/text_extraction/: basic_extraction.py  chunking.py  extraction_utils.py  image_extraction.py  image_extraction_worker.py  office_doc_extraction.py  office_extraction_worker.py  pdf_extraction.py  pdf_extraction_worker.py  web_extraction.py
docs/: architecture.md  configuration.md  operations.md  schema.md  testing.md
